add_subdirectory(galay-c)

if(GALAY_BUILD_UTILS AND EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/galay-utils/CMakeLists.txt")
    add_subdirectory(galay-utils)
endif()
if(GALAY_BUILD_KERNEL AND EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/galay-kernel/CMakeLists.txt")
    add_subdirectory(galay-kernel)
endif()
if(GALAY_BUILD_SSL AND EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/galay-ssl/CMakeLists.txt")
    add_subdirectory(galay-ssl)
endif()
if(GALAY_BUILD_HTTP AND EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/galay-http/CMakeLists.txt")
    add_subdirectory(galay-http)
endif()
if(GALAY_BUILD_WS AND EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/galay-ws/CMakeLists.txt")
    add_subdirectory(galay-ws)
endif()
if(GALAY_BUILD_HTTP2 AND EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/galay-http2/CMakeLists.txt")
    add_subdirectory(galay-http2)
endif()
if(GALAY_BUILD_REDIS AND EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/galay-redis/CMakeLists.txt")
    add_subdirectory(galay-redis)
endif()
if(GALAY_BUILD_RPC AND EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/galay-rpc/CMakeLists.txt")
    add_subdirectory(galay-rpc)
endif()
if(GALAY_BUILD_MYSQL AND EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/galay-mysql/CMakeLists.txt")
    add_subdirectory(galay-mysql)
endif()
if(GALAY_BUILD_MONGO AND EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/galay-mongo/CMakeLists.txt")
    add_subdirectory(galay-mongo)
endif()
if(GALAY_BUILD_ETCD AND EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/galay-etcd/CMakeLists.txt")
    add_subdirectory(galay-etcd)
endif()
if(GALAY_BUILD_MCP AND EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/galay-mcp/CMakeLists.txt")
    add_subdirectory(galay-mcp)
endif()
if(GALAY_BUILD_TRACING AND EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/galay-tracing/CMakeLists.txt")
    add_subdirectory(galay-tracing)
endif()
