if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/galay-common-c/CMakeLists.txt")
    add_subdirectory(galay-common-c)
endif()
if(TARGET galay::utils AND EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/galay-utils-c/CMakeLists.txt")
    add_subdirectory(galay-utils-c)
endif()
if(TARGET galay::kernel)
    add_subdirectory(galay-kernel-c)
endif()
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/galay-ssl-c/CMakeLists.txt")
    add_subdirectory(galay-ssl-c)
endif()
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/galay-http-c/CMakeLists.txt")
    add_subdirectory(galay-http-c)
endif()
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/galay-ws-c/CMakeLists.txt")
    add_subdirectory(galay-ws-c)
endif()
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/galay-http2-c/CMakeLists.txt")
    add_subdirectory(galay-http2-c)
endif()
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/galay-redis-c/CMakeLists.txt")
    add_subdirectory(galay-redis-c)
endif()
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/galay-rpc-c/CMakeLists.txt")
    add_subdirectory(galay-rpc-c)
endif()
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/galay-mysql-c/CMakeLists.txt")
    add_subdirectory(galay-mysql-c)
endif()
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/galay-mongo-c/CMakeLists.txt")
    add_subdirectory(galay-mongo-c)
endif()
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/galay-etcd-c/CMakeLists.txt")
    add_subdirectory(galay-etcd-c)
endif()
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/galay-mcp-c/CMakeLists.txt")
    add_subdirectory(galay-mcp-c)
endif()
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/galay-tracing-c/CMakeLists.txt")
    add_subdirectory(galay-tracing-c)
endif()
